<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_ellipse_image"
        android:title="@string/add" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule_image"
        android:title="@string/schdeuleicon" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_image"
        android:title="@string/profileicon" />

</menu>
