<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".SignUpActivity"
    android:background="@color/white"
    style="@style/SignUpStyle"
    android:gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/addimageview"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/maxresdefault"
        android:layout_marginTop="20dp"
        android:background="@drawable/addphoto_btn_image" />

<!--    <EditText
        android:id="@+id/fullnameText"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/fullname_text_image"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="30dp"
        android:text="@string/prijilevschi_dumitru1"
        android:textColor="@color/black"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <EditText
        android:id="@+id/birthdayText"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/birtday_text_image"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="date"
        android:paddingTop="30dp"
        android:text="@string/_1889_04_20"
        android:textColor="@color/black"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <EditText
        android:id="@+id/youremailText"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/youremail_text_image"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="textEmailAddress"
        android:paddingTop="30dp"
        android:text="@string/ad_hit7_gmail_com"
        android:textColor="@color/black"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <EditText
        android:id="@+id/phonenumberText"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/phonenumber_text_image"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:inputType="number"
        android:paddingTop="30dp"
        android:text="@string/_37368910111"
        android:textColor="@color/black"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <EditText
        android:id="@+id/locationadressText"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/locationadress_text_image"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="30dp"
        android:text="@string/braunau_am_inn_austria"
        android:textColor="@color/black"
        tools:ignore="Autofill,LabelFor,TextFields" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/next_btn_image" />-->

    <TextView
        android:id="@+id/fullnametext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:layout_marginRight="80dp"
        android:textColor="@color/black"
        android:layout_marginEnd="80dp" />

    <EditText
        android:id="@+id/fullnameText"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle"
        android:text="@string/prijilevschi_dumitruf"
        android:hint="@string/full_name"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:textColor="@color/black"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <TextView
        android:id="@+id/birthdaytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:layout_marginRight="80dp"
        android:textColor="@color/black"
        android:layout_marginEnd="80dp" />

    <EditText
        android:id="@+id/birthdayText"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:textColor="@color/black"
        android:text="@string/_1889_04_20"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle"
        android:layout_marginBottom="20dp"
        android:hint="@string/dd_mm_yy"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <TextView
        android:id="@+id/youremailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginRight="80dp"
        android:textColor="@color/black"
        android:layout_marginEnd="90dp" />

    <EditText
        android:id="@+id/youremailText"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:background="@drawable/rectangle"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:text="@string/adolf_hitler_gmail_com"
        android:hint="@string/your_email"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <TextView
        android:id="@+id/phonenumbertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginRight="70dp"
        android:textColor="@color/black"
        android:layout_marginEnd="60dp" />

    <EditText
        android:id="@+id/phonenumberText"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:text="@string/_37368910111"
        android:hint="@string/your_phone_number"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <TextView
        android:id="@+id/locationadresstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_address"
        android:layout_marginRight="80dp"
        android:textColor="@color/black"
        android:layout_marginEnd="50dp" />

    <EditText
        android:id="@+id/locationadressText"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:background="@drawable/rectangle"
        android:layout_marginBottom="20dp"
        android:hint="@string/your_location"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:text="@string/braunau_am_inn_austriaf"
        android:paddingLeft="10dp"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/next_btn_image" />

</LinearLayout>
</ScrollView>