<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".MainActivity"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <ImageView
                android:layout_width="209dp"
                android:layout_height="242dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/notifcontent_imageview_image"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/request_details"
                android:textColor="@color/green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/name"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/notifName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_family"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/desease"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/notifDisease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desease"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/location"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/notifLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:layout_marginBottom="5dp"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:text="@string/description"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/notifDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/doctor"
                android:textColor="@color/green" />

            <!--TODO : marginBottom mai putin-->
            <!--TODO : to put doctor block-->

           <include
                layout="@layout/selected_doc_pattern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"/>



            <Button
                android:id="@+id/notifConfimBtn"
                android:layout_width="200dp"
                android:layout_height="90dp"
                android:background="@drawable/notifconfirm_btn_image" />

            <Button
                android:id="@+id/notifCancelBtn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/notifcancel_btn_image" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>