<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/selecteddoclayout"
    android:layout_height="100dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/docprofphoto"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        tools:ignore="ContentDescription"
        android:src="@drawable/doctorportrate_ic_image"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/docprofname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/prijilevschi_dumitru"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/docprofspecs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eye_specialist"
            android:layout_marginBottom="10dp"
            android:textColor="@color/green"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

<!--            <ImageView
                android:layout_width="161dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:background="@drawable/multistart_ic_image"
                tools:ignore="ContentDescription"
                android:layout_marginEnd="5dp" />-->

            <RatingBar
                android:id="@+id/docprofstars"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="10" />

            <TextView
                android:id="@+id/docprofrate"
                android:layout_width="28dp"
                android:layout_marginStart="10dp"
                android:layout_height="match_parent"
                android:text="@string/_10"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginLeft="10dp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>